--- a/style.css
+++ b/style.css
@@ -94,8 +94,8 @@ h2{
     margin-right: 50px;
     margin-left: 300px;
     border: yellowgreen solid 2px;
-    background-color: yellow;
-    padding: 10px 40px;
+    background-color: orange;
+        padding: 10px 40px;
     box-shadow: 10px 10px 10px 10px;
 }
 .goal{
